--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,13 @@ dependencies:
   flutter_bloc: 
   shared_preferences: ^0.5.10
   dio: ^3.0.9
+  sqflite: ^1.3.1+1
+  bloc: ^4.0.0
+  http: ^0.12.0+1
+  permission_handler: ^5.0.0+hotfix.5
+  path_provider: ^1.6.9
+
+
 
 
 dev_dependencies:
@@ -43,6 +50,14 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
+  assets:
+    - assets/images/
+    - assets/images/0.75x/
+    - assets/images/1.0x/
+    - assets/images/1.5x/
+    - assets/images/2.0x/
+    - assets/images/3.0x/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
