--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,9 +53,9 @@ flutter:
 
   assets:
     - assets/images/
-    - assets/images/0.75x/
+    # - assets/images/0.75x/
     - assets/images/1.0x/
-    - assets/images/1.5x/
+    # - assets/images/1.5x/
     - assets/images/2.0x/
     - assets/images/3.0x/
 
@@ -86,6 +86,9 @@ flutter:
     - family: Font-Regular
       fonts:
         - asset: assets/fonts/SF-Pro-Display-Regular.otf
+    - family: Font-SemiBold
+      fonts:
+        - asset: assets/fonts/SF-Pro-Display-Semibold.otf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
