--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,11 @@ dependencies:
   http: ^0.12.0+1
   permission_handler: ^5.0.0+hotfix.5
   path_provider: ^1.6.9
+  country_code_picker: ^1.4.0
+  country_codes: ^1.0.1
+  
+
+
 
 
 
