--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  flutter_bloc: 
+  flutter_bloc: ^4.0.1
   shared_preferences: ^0.5.10
   dio: ^3.0.9
   sqflite: ^1.3.1+1
