--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   country_code_picker: ^1.4.0
   country_codes: ^1.0.1
   flutter_datetime_picker: ^1.4.0
+  url_launcher: ^5.7.2
 
 
 
