--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,10 @@ dependencies:
   country_codes: ^1.0.1
   flutter_datetime_picker: ^1.4.0
   url_launcher: ^5.7.2
+  flutter_swipe_action_cell: ^1.2.2
+  flutter_slidable: ^0.5.7
+
+
 
 
 
