--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
 
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="signs"
+        android:label="Signs"
         android:usesCleartextTraffic="true"
         android:icon="@mipmap/ic_launcher">
         <activity
