--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -38,12 +38,27 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "theSignsco.Signs"
+        applicationId "thesignsco.signs"
         minSdkVersion 21
         targetSdkVersion 28
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
+        ndk {
+            abiFilters "arm64-v8a", "armeabi", "armeabi-v7a", "universal", "x86_64", "x86"
+        }
+    }
+
+    android {
+        splits {
+            abi {
+                enable true
+                reset()
+                include "arm64-v8a", "armeabi", "armeabi-v7a", "universal", "x86_64", "x86"
+                universalApk true
+            }
+        }
     }
 
     buildTypes {
