--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = Signs
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = theSignsco.Signs
+PRODUCT_BUNDLE_IDENTIFIER = thesignsco.signs
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2020 theSignsco. All rights reserved.
