--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,8 +40,8 @@ dependencies:
   pin_code_fields: 
   flutter_share: ^1.0.5
   carousel_slider: ^2.3.1
-  flutter_local_notifications: ^3.0.1+6
-
+  flutter_local_notifications: ^0.8.4
+  flutter_device_type: ^0.2.0
 
 
 
