--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_device_type: ^0.2.0
   flutter_local_notifications: ^1.4.4+1
   rxdart: ^0.24.1
+  liquid_pull_to_refresh: ^2.0.0
 
 
 
