--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   flutter_local_notifications: ^1.4.4+1
   rxdart: ^0.24.1
   liquid_pull_to_refresh: ^2.0.0
+  flutter_toggle_tab: ^0.0.3+2
 
 
 
