--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ description: A new Flutter application.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.6.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -45,6 +45,7 @@ dependencies:
   rxdart: ^0.24.1
   liquid_pull_to_refresh: ^2.0.0
   flutter_toggle_tab: ^0.0.3+2
+  get: ^3.25.6
 
 
 
