--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   pretty_dio_logger: ^1.1.1
   simple_url_preview: ^2.0.0
   auto_size_text: ^2.1.0
+  image_picker: 0.6.7+22
 #  intl: ^0.17.0
 
 
