--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,8 @@ dependencies:
   image_picker: 0.6.7+22
   intl: ^0.17.0
   flutter_screenutil: ^4.0.3+1
+  path: ^1.8.0
+  flutter_uploader: ^1.2.1
 
 
 
