--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -64,5 +64,11 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>CFBundleLocalizations</key>
+    <array>
+        <string>en_US</string>
+        <string>ar_SA</string>
+        <string>as_IN</string>
+    </array>
 </dict>
 </plist>
