--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -136,4 +136,5 @@ flutter:
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
 flutter_intl:
+  main_locale: en_US
   enabled: true
