--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -30,9 +30,11 @@
 	<true/>
 	<key>NSAppTransportSecurity</key>
 	<dict>
-		<key>NSAllowsArbitraryLoads</key>
-		<true/>
-	</dict>
+    <key>NSAllowsArbitraryLoads</key>
+    <true/>
+    <key>NSAllowsArbitraryLoadsInWebContent</key>
+    <true/>
+    </dict>
 	<key>NSAppleMusicUsageDescription</key>
 	<string>$(PRODUCT_NAME) needs Location access for Allow sign in with Apple </string>
 	<key>NSCalendarsUsageDescription</key>
@@ -70,5 +72,6 @@
         <string>ar_SA</string>
         <string>as_IN</string>
     </array>
+
 </dict>
 </plist>
